--- a/data_extraction_from_website.ipynb
+++ b/data_extraction_from_website.ipynb
@@ -37,9 +37,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3IRBlx7fSdrh",
-        "outputId": "3ded5c13-002e-44de-c08e-e6c3fbdfe22f"
+        "outputId": "7e0f69a6-39c7-47c4-ac63-a4357d610af4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,34 +66,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3v_qy2gDE3rF",
-        "outputId": "71ea1593-56e3-44a3-8ac0-b45378fbacee"
+        "outputId": "8bab0123-1d4f-49d7-c5f0-c1b4a8cef056"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.82)] [1 InRelease 14.2 kB/129 kB 11%] [Connected t\r                                                                                                    \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,632 B]\n",
-            "Get:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease [1,581 B]\n",
-            "Get:4 https://r2u.stat.illinois.edu/ubuntu jammy InRelease [6,555 B]\n",
-            "Hit:5 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Get:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,632 B]\n",
+            "Get:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease [1,581 B]\n",
+            "Get:3 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
+            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Get:5 https://r2u.stat.illinois.edu/ubuntu jammy InRelease [6,555 B]\n",
             "Get:6 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
-            "Get:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  Packages [1,318 kB]\n",
-            "Get:8 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,230 kB]\n",
-            "Hit:9 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Get:10 http://security.ubuntu.com/ubuntu jammy-security/restricted amd64 Packages [3,657 kB]\n",
+            "Get:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  Packages [1,319 kB]\n",
+            "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
+            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
             "Get:11 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [127 kB]\n",
-            "Get:12 https://r2u.stat.illinois.edu/ubuntu jammy/main amd64 Packages [2,659 kB]\n",
-            "Get:13 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [2,634 kB]\n",
-            "Hit:14 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:15 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Get:16 https://r2u.stat.illinois.edu/ubuntu jammy/main all Packages [8,696 kB]\n",
-            "Get:17 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [2,939 kB]\n",
-            "Get:18 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,526 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [35.2 kB]\n",
-            "Fetched 25.1 MB in 3s (8,180 kB/s)\n",
+            "Get:12 https://r2u.stat.illinois.edu/ubuntu jammy/main all Packages [8,699 kB]\n",
+            "Get:13 http://security.ubuntu.com/ubuntu jammy-security/restricted amd64 Packages [3,664 kB]\n",
+            "Get:14 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,235 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [2,639 kB]\n",
+            "Get:16 https://r2u.stat.illinois.edu/ubuntu jammy/main amd64 Packages [2,660 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,531 kB]\n",
+            "Get:18 http://archive.ubuntu.com/ubuntu jammy-updates/restricted amd64 Packages [3,799 kB]\n",
+            "Get:19 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [2,941 kB]\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [35.2 kB]\n",
+            "Fetched 28.9 MB in 4s (7,136 kB/s)\n",
             "Reading package lists... Done\n",
             "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
             "Reading package lists... Done\n",
@@ -101,7 +102,7 @@
             "Reading state information... Done\n",
             "unzip is already the newest version (6.0-26ubuntu3.2).\n",
             "wget is already the newest version (1.21.2-2ubuntu1.1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 26 not upgraded.\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 28 not upgraded.\n",
             "Collecting selenium\n",
             "  Downloading selenium-4.29.0-py3-none-any.whl.metadata (7.1 kB)\n",
             "Collecting webdriver-manager\n",
@@ -131,10 +132,10 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->webdriver-manager) (3.4.1)\n",
             "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.11/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
             "Downloading selenium-4.29.0-py3-none-any.whl (9.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m62.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m47.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading webdriver_manager-4.0.2-py2.py3-none-any.whl (27 kB)\n",
             "Downloading trio-0.29.0-py3-none-any.whl (492 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m492.9/492.9 kB\u001b[0m \u001b[31m36.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m492.9/492.9 kB\u001b[0m \u001b[31m30.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading trio_websocket-0.12.2-py3-none-any.whl (21 kB)\n",
             "Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
             "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
@@ -144,22 +145,22 @@
             "Successfully installed outcome-1.3.0.post0 python-dotenv-1.0.1 selenium-4.29.0 sortedcontainers-2.4.0 trio-0.29.0 trio-websocket-0.12.2 webdriver-manager-4.0.2 wsproto-1.2.0\n",
             "Warning: apt-key is deprecated. Manage keyring files in trusted.gpg.d instead (see apt-key(8)).\n",
             "OK\n",
-            "Hit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "Hit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Get:1 http://dl.google.com/linux/chrome/deb stable InRelease [1,825 B]\n",
+            "Hit:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
             "Hit:3 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "Hit:4 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
-            "Get:5 http://dl.google.com/linux/chrome/deb stable InRelease [1,825 B]\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Hit:9 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Get:10 http://dl.google.com/linux/chrome/deb stable/main amd64 Packages [1,209 B]\n",
+            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Hit:5 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Get:6 http://dl.google.com/linux/chrome/deb stable/main amd64 Packages [1,210 B]\n",
+            "Hit:7 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
+            "Hit:8 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+            "Hit:9 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "Hit:10 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
             "Hit:11 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
             "Hit:12 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Fetched 3,034 B in 1s (3,296 B/s)\n",
+            "Fetched 3,035 B in 1s (2,191 B/s)\n",
             "Reading package lists... Done\n",
-            "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
             "W: http://dl.google.com/linux/chrome/deb/dists/stable/InRelease: Key is stored in legacy trusted.gpg keyring (/etc/apt/trusted.gpg), see the DEPRECATION section in apt-key(8) for details.\n",
+            "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
             "Reading state information... Done\n",
@@ -167,26 +168,26 @@
             "  libvulkan1 mesa-vulkan-drivers\n",
             "The following NEW packages will be installed:\n",
             "  google-chrome-stable libvulkan1 mesa-vulkan-drivers\n",
-            "0 upgraded, 3 newly installed, 0 to remove and 26 not upgraded.\n",
+            "0 upgraded, 3 newly installed, 0 to remove and 28 not upgraded.\n",
             "Need to get 125 MB of archives.\n",
-            "After this operation, 424 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 libvulkan1 amd64 1.3.204.1-2 [128 kB]\n",
-            "Get:2 http://dl.google.com/linux/chrome/deb stable/main amd64 google-chrome-stable amd64 133.0.6943.126-1 [114 MB]\n",
+            "After this operation, 423 MB of additional disk space will be used.\n",
+            "Get:1 http://dl.google.com/linux/chrome/deb stable/main amd64 google-chrome-stable amd64 133.0.6943.141-1 [114 MB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu jammy/main amd64 libvulkan1 amd64 1.3.204.1-2 [128 kB]\n",
             "Get:3 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 mesa-vulkan-drivers amd64 23.2.1-1ubuntu3.1~22.04.3 [10.7 MB]\n",
-            "Fetched 125 MB in 2s (82.4 MB/s)\n",
+            "Fetched 125 MB in 6s (22.6 MB/s)\n",
             "Selecting previously unselected package libvulkan1:amd64.\n",
             "(Reading database ... 124935 files and directories currently installed.)\n",
             "Preparing to unpack .../libvulkan1_1.3.204.1-2_amd64.deb ...\n",
             "Unpacking libvulkan1:amd64 (1.3.204.1-2) ...\n",
             "Selecting previously unselected package google-chrome-stable.\n",
-            "Preparing to unpack .../google-chrome-stable_133.0.6943.126-1_amd64.deb ...\n",
-            "Unpacking google-chrome-stable (133.0.6943.126-1) ...\n",
+            "Preparing to unpack .../google-chrome-stable_133.0.6943.141-1_amd64.deb ...\n",
+            "Unpacking google-chrome-stable (133.0.6943.141-1) ...\n",
             "Selecting previously unselected package mesa-vulkan-drivers:amd64.\n",
             "Preparing to unpack .../mesa-vulkan-drivers_23.2.1-1ubuntu3.1~22.04.3_amd64.deb ...\n",
             "Unpacking mesa-vulkan-drivers:amd64 (23.2.1-1ubuntu3.1~22.04.3) ...\n",
             "Setting up libvulkan1:amd64 (1.3.204.1-2) ...\n",
             "Setting up mesa-vulkan-drivers:amd64 (23.2.1-1ubuntu3.1~22.04.3) ...\n",
-            "Setting up google-chrome-stable (133.0.6943.126-1) ...\n",
+            "Setting up google-chrome-stable (133.0.6943.141-1) ...\n",
             "update-alternatives: using /usr/bin/google-chrome-stable to provide /usr/bin/x-www-browser (x-www-browser) in auto mode\n",
             "update-alternatives: using /usr/bin/google-chrome-stable to provide /usr/bin/gnome-www-browser (gnome-www-browser) in auto mode\n",
             "update-alternatives: using /usr/bin/google-chrome-stable to provide /usr/bin/google-chrome (google-chrome) in auto mode\n",
@@ -282,9 +283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jd_K434aFIMg",
-        "outputId": "fe5ed283-21e9-465d-b303-a040ebb3879f"
+        "outputId": "5a4a30e4-115a-4d76-bd27-7064a9e1b98b"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,9 +314,9 @@
           "height": 17
         },
         "id": "youvVY3sfETD",
-        "outputId": "1be7ea20-069b-4536-f740-e7ea8be42237"
+        "outputId": "d9b7ba0f-1917-4f01-95db-dc0188159b5b"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
